--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.4.1
+atomicwrites==1.4.0
 attrs==21.2.0
 autopep8==1.5.7
 Babel==2.9.1
@@ -8,11 +9,13 @@ cachetools==4.2.2
 certifi==2021.5.30
 cffi==1.14.6
 charset-normalizer==2.0.6
+colorama==0.4.4
 cryptography==3.4.8
 defusedxml==0.7.1
 dj-rest-auth==2.1.11
 Django==3.2.7
 django-allauth==0.45.0
+django-cors-headers==3.13.0
 django-countries==7.2.1
 django-environ==0.7.0
 django-filter==21.1
